集成通用mapper功能，提供‘增删改查’操作。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,14 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
+#pagehelper∑÷“≥≈‰÷√
+logging.level.com.example.demo.dao=DEBUG
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
+pagehelper.page-size-zero=true
+
+#Õ®”√mapper ≈‰÷√
+mapper.mappers=com.example.demo.core.universal.Mapper
+
