--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 server.port=8004
-
 spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&autoReconnect=true&failOverReadOnly=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #连接池配置
 spring.datasource.initialSize=5
@@ -27,12 +25,9 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,slf4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
-
 #异常配置
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
-
 #pagehelper分页配置
 logging.level.com.example.demo.dao=DEBUG
 pagehelper.helper-dialect=mysql
@@ -40,7 +35,13 @@ pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 pagehelper.params=count=countSql
 pagehelper.page-size-zero=true
-
 #通用mapper 配置
 mapper.mappers=com.example.demo.core.universal.Mapper
+
+#redis 配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.timeout=0
+spring.redis.password=
+
 
